--- a/Guess_the_number/index.html
+++ b/Guess_the_number/index.html
@@ -20,10 +20,10 @@
         <p>Try and guess a random number between 1 and 100.</p>
         <p>You have 10 attempts to guess the right number.</p>
 
-        <br>
+    </br>
 
         <form class="form">
-            <label for="guessField" id="guess">Guess a number</label>
+            <label2 for="guessField" id="guess">Guess a number</label>
             <input type="text" id="guessField" class="guessField">
             <input type="submit" id="subt" value="Submit guess" class="guessSubmit">
         </form>
@@ -36,10 +36,9 @@
             </span></p>
 
             <p class="lowOrHi"></p>
-
         </div>
     </div>
-        
+    <script src="code.js"></script>
 </body>
-<script src="code.js"></script>
+
 </html>
