--- a/Color_Changer/index.html
+++ b/Color_Changer/index.html
@@ -11,8 +11,8 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
-        >Youtube channel</a
+      <a target="_blank" href="https://github.com/ankesh28raj/Projects"
+        >GitHub Projects</a
       >
     </nav>
     <div class="canvas">
@@ -38,6 +38,6 @@
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <script src="Colorchanger.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
